homeWork/class2/webook/k8s-redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webook-redis
spec:
  selector:
    app: webook-redis
  ports:
    - protocol: TCP
      port: 6380
#      Redis 默认端口
      targetPort: 6379
      nodePort: 30003
  type: NodePort
